@@ -17,6 +17,7 @@ assembler implementations
 B Fixed segfault in FXFSMonitor on process exit due to unremoved paths
 B Moved FXException data into private structure to work around MSVC stack
 over-allocation bug
+B QSSLDevice wasn't 64 bit compatible and threw random errors :(
 
 * Removed many unnecessary fetches of per-thread data (slow on POSIX) in
 FXException
